src/app/scss/layout/_header.scss
header.main-header {
  display: flex;
  justify-content: center;


  .mesh-image {
    display: none;
  }

  .bike-img {
    display: none;
  }
  .header-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: -16px;
    margin-bottom: -16px;

    & > * {
      @include my(4);
    }
  }
  .main-heading {
    font-size: 48px;
    text-align: center;
  }
  .working-hours {
    width: 90%;
    .desktop {
      display: none;
    }
    article {
      max-width: 150px;

      p {
        font-size: 21px;
      }
    }
    .first-row {
      display: flex;
      justify-content: space-between;
      width: 100%;
      margin: -16px;
      & > * {
        @include my(7);
      }
    }
    .second-row {
      width: 50%;
    }
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .sub {
    font-family: Montserrat-SemiBold;
    text-align: center;
    @include mb(6);
  }
  .action-buttons {
    display: flex;
    width: 100%;
    margin: -9px;

    .white-button {
      svg {
        min-width: 26px;
      }
    }

    & > * {
      width: 50%;
      display: flex;
      align-items: center;
      justify-content: center;
      @include m(3);
      svg {
        @include mr(3);
      }
    }
  }
  @include breakpoint(m) {
    position: relative;

    .mesh-image {
      display: block;
      width: 100vw;
      height: 76vh;
      top: -85px;
      position: absolute;
      z-index: -1;
    }

    .working-hours {
      width: 100%;
      article {
        p {
          font-size: 26px;
        }
      }
    }

    .bike-img {
      display: block;
      width: 600px;
      height: 382px;
      margin: auto;
      @include mr(7);

      @include breakpoint(l) {
        width: 737px;
        height: 469px;
      }
    }
    .header-info {
      @include ml(7);
      width: 40%;

      & > * {
        @include my(0);
      }
    }
    
    .mesh-graphic {
      position: absolute;
      z-index: -1;
      top: -46%;
    }
  }

  @include breakpoint(working-hours) {
    .working-hours {
      .desktop {
        display: block;
      }
      .second-row {
        display: none;
      }
    }
  }
}

